# aws-lambda-rust-runtime

./: CHANGELOG.md  README.md  netlify.toml
.github/workflows/: build.yml  fossa.yml
lambda/: Cargo.toml
lambda-attributes/: Cargo.toml
lambda-attributes/src/: lib.rs
lambda-http/: Cargo.toml
lambda-http/examples/: hello-http-without-macros.rs  hello-http.rs  stateful-http.rs
lambda-http/src/: body.rs  ext.rs  lib.rs  request.rs  response.rs  strmap.rs
lambda/examples/: basic.rs  error-handling.rs  hello-without-macro.rs  macro.rs
lambda/src/: client.rs  lib.rs  simulated.rs  types.rs
