[package]
name = "netlify_lambda_attributes"
version = "0.1.0"
authors = [
    "David Barsky <dbarsky@amazon.com>",
    "David Calavera <david@netlify.com"
]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/netlify/aws-lambda-rust-runtime"
readme = "../README.md"
description = "Lambda macro attributes"
keywords = ["AWS", "Lambda"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4.30" }
syn = { version = "1.0.5", features = ["full"] }
quote = "1"
