[package]
name = "netlify_lambda_http"
version = "0.1.2"
authors = ["Doug Tangren", "David Calavera <david@netlify.com>"]
edition = "2018"
description = "Application Load Balancer and API Gateway event types for AWS Lambda"
keywords = ["AWS", "Lambda", "APIGateway", "ALB", "API"]
license = "Apache-2.0"
homepage = "https://github.com/netlify/aws-lambda-rust-runtime"
readme = "../README.md"
documentation = "https://rs-lambda-runtime.netlify.engineering/netlify_lambda_http"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.13"
http = "0.2"
netlify_lambda = { path = "../lambda", version = "0.1" }
netlify_lambda_attributes = { path = "../lambda-attributes", version = "0.1" }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
serde_urlencoded = "0.7"

[dev-dependencies]
log = "^0.4"
maplit = "1.0"
tokio = { version = "1.0.1", features = ["macros"] }
