[package]
name = "netlify_lambda"
version = "0.1.2"
authors = [
    "David Barsky <dbarsky@amazon.com>",
    "David Calavera <david@netlify.com>",
]
description = "AWS Lambda Runtime"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/netlify/aws-lambda-rust-runtime"
readme = "../README.md"
documentation = "https://rs-lambda-runtime.netlify.engineering/netlify_lambda"

[features]
default = ["simulated", "derive"]
simulated = []
derive = ["netlify_lambda_attributes"]

[dependencies]
tokio = { version = "0.2.4", features = ["full"] }
hyper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.39"
tower-service = "0.3"
bytes = "0.5"
http = "0.2"
netlify_lambda_attributes = { path = "../lambda-attributes", version = "0.1.0", optional = true }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
async-stream = "0.2"

[dev-dependencies]
tracing-subscriber = "0.2"
once_cell = "1.4.0"
simple_logger = "1.6.0"
log = "0.4"
simple-error = "0.2"
