[package]
name = "lamedh_runtime"
version = "0.3.0"
authors = [
    "David Barsky <dbarsky@amazon.com>",
    "David Calavera <david.calavera@gmail.com>",
]
description = "AWS Lambda Runtime"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/lamedh-dev/aws-lambda-rust-runtime"
readme = "../README.md"
documentation = "https://rs-lambda-runtime.netlify.engineering/lamedh_runtime"

[features]
default = ["simulated", "derive"]
simulated = []
derive = ["lamedh_attributes"]

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
futures-core = "0.3.8"
futures-util = "0.3.8"
hyper = { version = "0.14", features = ["client", "server", "tcp", "http1", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.39"
serde_path_to_error = "0.1"
tower-service = "0.3"
bytes = "1.0.0"
http = "0.2"
lamedh_attributes = { path = "../lambda-attributes", version = "0.3", optional = true }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
async-stream = "0.3"

[dev-dependencies]
tracing-subscriber = "0.2"
once_cell = "1.4.0"
simple_logger = "1.6.0"
log = "0.4"
simple-error = "0.2"
